@@ -1,3 +1,11 @@
-This painter app is developed with Javafx version 16 and JDK version 11.
+Author: Mehmood Yar Baig
+
+Incorporate the RGBA color chooser you created in the Color Chooser app into the Painter app so that the user can choose any drawing color. Changing a Slider’s value should update the color swatch displayed to the user and set the brushColor instance variable to the current Color.
+
+Download the JavaFX SDK: https://gluonhq.com/products/javafx/
+
+Add JavaFX library: File -> Project Structure -> Libraries -> add library path->C:\javafx-sdk-11.0.2\lib
+
+Add VM Options: Run-> Edit Configuration -> modify options -> add vm options --module-path %PATH_TO_JAVAFX_SDK/LIB% --add-modules javafx.controls,javafx.fxml
 
 ![image](https://user-images.githubusercontent.com/48985550/119369234-c1c68180-bcd5-11eb-9d56-e9fa32f86a30.png)
